# motor

./: .gitignore  AGENTS.md  MANIFEST.in  PLAN.md  README.md  pyproject.toml
docs/: README.md  cli-and-runtime.md  components.md  getting-started.md  layout.md  parameters.md  report-file.md  sql.md
examples/revenue/: report.md
examples/revenue/data/: orders.csv
runtime/: package-lock.json  package.json  tsconfig.json  vite.config.ts
runtime/scripts/: copy-duckdb-assets.mjs
runtime/src/: components.ts  csvDownload.test.ts  csvDownload.ts  dataLoader.test.ts  dataLoader.ts  duckdbRunner.ts  main.ts  queryTemplates.test.ts  queryTemplates.ts  runtimeMetrics.ts  state.ts  types.ts  updateCheck.ts  valueFormatting.ts
runtime/src/charts/: heatmapRowMetric.test.ts  heatmapRowMetric.ts  stackNormalization.test.ts  stackNormalization.ts  vegaAdapter.ts
src/motor/: __init__.py  __main__.py  cli.py  compiler.py  data_sources.py  errors.py  html.py  inspect.py  manifest.py  models.py  parquet_metadata.py  parser.py  update_server.py
src/motor/static/: duckdb-browser-mvp.worker.js  runtime.js
src/motor/templates/: report.html.j2
tests/: test_vertical_slice.py
